[gd_scene load_steps=12 format=3 uid="uid://b8j2p4q6y3nxk"]

[ext_resource type="Script" uid="uid://bif2v64x3urai" path="res://scenes/intro/main_menu.gd" id="1_002sk"]
[ext_resource type="FontFile" uid="uid://dmdt6ucsbmqe7" path="res://scenes/gameUI/fonts/Super Squad.otf" id="2_yctej"]
[ext_resource type="Theme" uid="uid://dw33yhp6pcuki" path="res://scenes/button_theme.tres" id="3_4bhiq"]
[ext_resource type="AudioStream" uid="uid://byh80vwp6gfn5" path="res://music/drunk-on-funk-273910.mp3" id="4_tesan"]
[ext_resource type="AudioStream" uid="uid://csuegm58d0i4w" path="res://sounds/LetsTruckinGo.mp3" id="5_25k4g"]

[sub_resource type="Gradient" id="Gradient_25k4g"]
colors = PackedColorArray(0.233401, 0.483771, 0.56031, 1, 0.290354, 0.290354, 0.290353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qgyxu"]
gradient = SubResource("Gradient_25k4g")
fill_from = Vector2(0.316239, 0.119658)
fill_to = Vector2(0.790598, 0.884615)

[sub_resource type="LabelSettings" id="LabelSettings_4bhiq"]
font = ExtResource("2_yctej")
font_size = 128
font_color = Color(0.813265, 0, 0.0890377, 1)
outline_size = 21
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6n3p"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.780392, 0.745098, 0.678431, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xk8p"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.580392, 0.552941, 0.498039, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8w2r"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.678431, 0.647059, 0.584314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_002sk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qgyxu")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -286.0
offset_top = 3.0
offset_right = 274.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_colors/font_outline_color = Color(0.219608, 0.219608, 0.219608, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 64
text = "CRAZY TRUCK"
label_settings = SubResource("LabelSettings_4bhiq")
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("3_4bhiq")
text = "NEW GAME"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.847059, 0.772549, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_y6n3p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3xk8p")
theme_override_styles/normal = SubResource("StyleBoxFlat_q8w2r")
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("3_4bhiq")
text = "EXIT"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tesan")
autoplay = true

[node name="LetsTruckingGoTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="LetsTruckingGo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_25k4g")

[connection signal="timeout" from="LetsTruckingGoTimer" to="." method="_on_lets_trucking_go_timer_timeout"]
